--- a/calculatorInstance.html
+++ b/calculatorInstance.html
@@ -13,7 +13,7 @@
     <table class="calculator">
         <tr>
             <td colspan="4" class="calc_td_result">
-                <input type="text" readonly="readonly" id="calc_result" class="calc_result"/>
+                <input type="text" readonly="readonly" disabled="true" id="calc_result" class="calc_result"/>
             </td>
         </tr>
         <tr>
@@ -81,9 +81,6 @@
             </td>
         </tr>
     </table>
-    <div id = "spinner" style = "display:none;">
-        <img src="https://shop.ustechsupport.com/static/layouts/default/images/spinner.gif"/>
-    </div>
     <div id="history">
     </div>
 </form>
