--- a/calculatorInstance.html
+++ b/calculatorInstance.html
@@ -3,10 +3,8 @@
 <head>
     <title></title>
     <link rel="stylesheet" type="text/css" href="styles/calcStyle.css" media="screen" />
-    <script language="javascript" src="scripts/require.js"></script>
-    <script language="javascript" src="scripts/jquery-1.9.1.js"></script>
-    <script language="javascript" src="scripts/underscore.js"></script>
-    <script language="javascript" src="scripts/baseFunctional.js"></script>
+    <script language="javascript" src="scripts/lib/underscore.js"></script>
+    <script data-main="scripts/main" src="scripts/lib/require.js"></script>
 </head>
 <body>
 <form name="calc">
