--- a/calculatorInstance.html
+++ b/calculatorInstance.html
@@ -1,88 +1,85 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="styles/calcStyle.css" media="screen" />
-    <script language="javascript" src="scripts/require.js"></script>
-    <script language="javascript" src="scripts/jquery-1.9.1.js"></script>
-    <script language="javascript" src="scripts/underscore.js"></script>
-    <script language="javascript" src="scripts/baseFunctional.js"></script>
-</head>
-<body>
-<form name="calc">
-    <table class="calculator">
-        <tr>
-            <td colspan="4" class="calc_td_result">
-                <input type="text" readonly="readonly" disabled="true" id="calc_result" class="calc_result"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="button" class="calc_btn" value="C"/>
-            </td>
-            <td/>
-            <td/>
-            <td/>
-        </tr>
-        <tr>
-            <td>
-                <input type="button" class="calc_btn" value="7"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="8"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="9"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="+"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="button" class="calc_btn" value="4"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="5"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="6"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="-"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="button" class="calc_btn" value="1"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="2"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="3"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="*"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input type="button" class="calc_btn" value="0"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="+/-"/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="="/>
-            </td>
-            <td>
-                <input type="button" class="calc_btn" value="/"/>
-            </td>
-        </tr>
-    </table>
-    <div id="history">
-    </div>
-</form>
-</body>
+    <head>
+        <title></title>
+        <link rel="stylesheet" type="text/css" href="styles/calcStyle.css" media="screen" />
+        <script data-main="scripts/main" src="scripts/lib/require.js"></script>
+    </head>
+    <body>
+        <form name="calc">
+            <table class="calculator">
+                <tr>
+                    <td colspan="4" class="calc_td_result">
+                        <input type="text" readonly="readonly" disabled="true" id="calc_result" class="calc_result"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="button" class="calc_btn" value="C"/>
+                    </td>
+                    <td/>
+                    <td/>
+                    <td/>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="button" class="calc_btn" value="7"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="8"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="9"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="+"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="button" class="calc_btn" value="4"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="5"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="6"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="-"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="button" class="calc_btn" value="1"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="2"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="3"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="*"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="button" class="calc_btn" value="0"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="+/-"/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="="/>
+                    </td>
+                    <td>
+                        <input type="button" class="calc_btn" value="/"/>
+                    </td>
+                </tr>
+            </table>
+            <div id="history">
+            </div>
+        </form>
+    </body>
 </html>
