--- a/calculatorInstance.html
+++ b/calculatorInstance.html
@@ -3,7 +3,7 @@
     <head>
         <title></title>
         <link rel="stylesheet" type="text/css" href="styles/calcStyle.css" media="screen" />
-        <script data-main="scripts/main" src="scripts/lib/require.js"></script>
+        <script data-main="scripts/main" src="http://requirejs.org/docs/release/2.1.4/minified/require.js"></script>
     </head>
     <body>
         <form name="calc">
